# gaussian_processes_motion_planning

./: CMakeLists.txt  README.md  gpmp2.h
debug/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  gpmp2-exports.cmake
debug/Testing/Temporary/: CTestCostData.txt
debug/atomic_configure/: _setup_util.py  local_setup.sh  setup.sh
debug/catkin_generated/: generate_cached_setup.py  setup_cached.sh
debug/devel/: .catkin  .rosinstall
debug/fabo_arm/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/gpmp2/: CTestTestfile.cmake  Makefile  cmake_install.cmake  libgpmp2Debug.so.0
debug/gpmp2/dynamics/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/gpmp2/geometry/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/gpmp2/gp/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/gpmp2/kinematics/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/gpmp2/obstacle/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/gpmp2/planner/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/gpmp2/utils/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/matlab/: CTestTestfile.cmake  Makefile  cmake_install.cmake
fabo_arm/: CMakeLists.txt
gpmp2/: CMakeLists.txt
gpmp2/gp/: GaussianProcessPriorLinear.h
gpmp2/kinematics/: Arm.cpp  CMakeLists.txt  ForwardKinematics-inl.h  GaussianPriorWorkspaceOrientation.h  RobotModel-inl.h  mobileBaseUtils.cpp
gpmp2/obstacle/: SignedDistanceField.h
gpmp2/planner/: BatchTrajOptimizer.cpp  TrajUtils.cpp
matlab/: Debug_of_WAMWorkspaceConstraintsExample.m  RM75WorkspaceConstraintsExample.m  WAMPlannerExample.m  WAMWorkspaceConstraintsExample.m  dof6_WAMPlannerExample.m  rm75_WAMPlannerExample.m  rm75_WAMWorkspaceConstraintsExample.m  zhjd_WAMWorkspaceConstraintsExample.asv  zhjd_WAMWorkspaceConstraintsExample.m
matlab/+gpmp2/: generate3Ddataset.m  generateArm.m  plotArm.m
